# go-cart

./: package-lock.json
go-cart/: .cursorrules  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
go-cart/src/: App.tsx  env.d.ts  index.css  main.tsx  manifest.json  types.d.ts  types.ts
go-cart/src/components/: Feed.tsx  NavBar.tsx  OverlayNav.tsx  PostComposer.tsx  RequestFeed.tsx  Requester.tsx  RequestsProfile.tsx  ShoppingRequestPage.tsx
go-cart/src/components/cart/: CartItemEditor.tsx  CartItemList.tsx  CartSpotlight.tsx  CartSubmitForm.tsx
go-cart/src/components/feed/: ReelCard.tsx
go-cart/src/components/request/: BuilderOverlay.tsx  CurationsOverlay.tsx  RequestCard.tsx  RequestForm.tsx  RequestList.tsx
go-cart/src/components/requests/: RequestDetailOverlay.tsx  RequestForm.tsx  RequestList.tsx
go-cart/src/services/: api.ts  cart.service.ts  cartsService.ts  curation.service.ts  fal.service.ts  orders.service.ts  request.service.ts  request_assets.service.ts  requestsService.ts  storage.ts
go-cart/src/shims/: shop-minis-react.d.ts
server/: README.md  db.txt  env.txt  main.py  pyproject.toml  requirements.txt  setup_db.sh  setup_env.sh
server/app/: database.py  models.py  r2_service.py  shopify_files_service.py
server/app/routers/: cart_products.py  carts.py  products.py  request_assets.py  request_tags.py  requests.py
server/tests/: test_r2_service.py  test_request_assets.py  test_request_assets_integration.py  test_request_assets_prod_integration.py
