[project]
name = "go-cart-server"
version = "1.0.0"
description = "FastAPI server for Shopify Minis with asyncpg database operations"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "boto3>=1.37.38",
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "moto[s3]>=5.0.0,<6.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit external services (deselect with -m 'not integration')",
    "prod_integration: marks tests that use real production DB and R2 (requires RUN_PROD_INTEGRATION=1)",
]
